# trashy-robot

./: .gitignore  .gitmodules  README.md
camera/: CMakeLists.txt
camera/include/: camera.hpp
camera/src/: camera.cpp  other_camera.cpp
classifier/: CMakeLists.txt  classifier.py  o.txt  serial_classifier.py  transfer_learn.ipynb  transfer_learn.py
classifier/TPU_classifier/ir/: ir_model.xml
classifier/TPU_classifier/ir/openvino_env/: pyvenv.cfg
classifier/include/: classifier.hpp
classifier/naive_classifier/: serial_classifier.py  timerStream.py
classifier/src/: classifier.cpp
controller/: .CMakeLists.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.py  motor_controller.py
controller/C_controller/: CMakeLists.txt  README  README.md
controller/C_controller/include/: mc.h.gch  mc.hpp  motor_controller.hpp
controller/C_controller/src/: CMakeLists.txt  auto_driver.cpp  main.cpp  mc.cpp  motor_controller.cpp
controller/include/: controller.hpp  motor.hpp
controller/libs/I2C/src/: Makefile
controller/libs/PCA9685/src/: CMakeLists.txt  Makefile
controller/src/: CMakeLists.txt  auto_driver.cpp  cmd_reciever.cpp  manual_driver.cpp  motor.cpp  point_generator.cpp
depth-ai-testscripts/: README.md
test_scripts/motor_driver/: motor_test.py  pwm_test.py
test_scripts/servo_driver/: pwm_test.py
tools/: I2C_CMakeLists.txt  README.md  rgb_full_resolution_saver.py  timerStream.py  train.txt  transfer_learn.py
tools/TPU_classifier/: edge_detection.py
tools/depth-ai-testscripts/: depth_hello_world.py
